...
                android:text="Quantity"
                android:textColor="@color/grey"
                android:textSize="18sp" />


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:entries="@array/item_quantity" />


...


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/add_to_cart_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Add to cart"
        android:textAllCaps="false"
        android:textSize="18sp" />
...
