...
            android:layout_centerVertical="true"
            android:text="Shopping Cart"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/cart_icon_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp">

            <ImageView
...
